@@ -27,7 +27,7 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
   @Nullable
   private final T pingRequest;
 
-  public AbstractBytesInterceptor(@Nonnull BaudRate baudRate, @Nullable T pingRequest, int ignoreBufferLimit) {
+  protected AbstractBytesInterceptor(@Nonnull BaudRate baudRate, @Nullable T pingRequest, int ignoreBufferLimit) {
     outBuffer = ByteBuffer.allocate(baudRate.get());
     ignoreBuffer = ByteBuffer.allocate(ignoreBufferLimit);
     this.baudRate = baudRate;
@@ -38,7 +38,7 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
   public final Stream<R> apply(@Nonnull ByteBuffer src) {
     Collection<R> responses = innerProcessIn(src);
     if (logger.isLoggable(LOG_LEVEL_LEXEMES)) {
-      responses.forEach(response -> logger.log(LOG_LEVEL_LEXEMES, String.format("#%x %s", hashCode(), response)));
+      responses.forEach(response -> logger.log(LOG_LEVEL_LEXEMES, "#%x %s".formatted(hashCode(), response)));
     }
     return responses.stream();
   }
@@ -56,10 +56,10 @@ public abstract class AbstractBytesInterceptor<T extends BufferFrame, R> impleme
     outBuffer.flip();
     if (logger.isLoggable(LOG_LEVEL_ERRORS)) {
       if (outBuffer.limit() > 1) {
-        logger.log(LOG_LEVEL_ERRORS, String.format("#%x %s - %d bytes OUT to hardware", hashCode(), request, outBuffer.limit()));
+        logger.log(LOG_LEVEL_ERRORS, "#%x %s - %d bytes OUT to hardware".formatted(hashCode(), request, outBuffer.limit()));
       }
       else {
-        logger.log(LOG_LEVEL_ERRORS, String.format("#%x %s - OUT to hardware", hashCode(), request));
+        logger.log(LOG_LEVEL_ERRORS, "#%x %s - OUT to hardware".formatted(hashCode(), request));
       }
     }
     return outBuffer;
