@@ -65,7 +65,7 @@ public class FileDataProvider {
   }
 
   private static Path createFile(int kBytes) throws IOException {
-    Path path = LogBuilders.SIMPLE.build(String.format("%s %d kBytes", FileDataProvider.class.getSimpleName(), kBytes)).getPath();
+    Path path = LogBuilders.SIMPLE.build("%s %d kBytes".formatted(FileDataProvider.class.getSimpleName(), kBytes)).getPath();
     if (kBytes >= 0) {
       try (WritableByteChannel channel = Files.newByteChannel(path,
           StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING)) {
